--- a/src/config/.env.development
+++ b/src/config/.env.development
@@ -2,7 +2,7 @@ APP_NAME="europa_re"
 DB_HOST="localhost"
 DB_NAME="europa-re.com"
 DB_USER="root"
-DB_PASS="med1alb"
+DB_PASS="linux9"
 DB_ITEMPERPAGE_PAGINATION=10
 DB_PAGERANGE_PAGINATION=1
 CACHE_TTL=20
