--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "zendframework/zend-permissions-acl": "2.5.1",
         "zendframework/zend-session": "2.5.1",
         "vlucas/valitron": "^1.2",
-        "vlucas/phpdotenv": "^2.2"
+        "vlucas/phpdotenv": "^2.2",
+        "codeguy/upload": "1.3.2",
+        "intervention/image": "2.2.2"
     },
     "autoload": {
         "psr-4": {
