10. Some minor changes

--- a/src/config/.env.development
+++ b/src/config/.env.development
@@ -1,8 +1,8 @@
 APP_NAME="europa_re"
 DB_HOST="localhost"
 DB_NAME="europa-re.com"
-DB_USER="root"
-DB_PASS="med1alb"
+DB_USER="europa"
+DB_PASS="europa"
 DB_ITEMPERPAGE_PAGINATION=10
 DB_PAGERANGE_PAGINATION=2
 CACHE_TTL=20
