22. Some minor changes to UI

--- a/src/config/.env.production
+++ b/src/config/.env.production
@@ -1,8 +1,8 @@
 APP_NAME="europa_re"
 DB_HOST="localhost"
-DB_NAME="europa-re.com"
-DB_USER=""
-DB_PASS=""
+DB_NAME="h0i7w8d4_europa-re_com"
+DB_USER="h0i7w8d4_3R3uS3r"
+DB_PASS="4Rt+*gFvsnqk"
 DB_ITEMPERPAGE_PAGINATION=10
 DB_PAGERANGE_PAGINATION=2
 CACHE_TTL=86400
