--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "vlucas/valitron": "^1.2",
         "vlucas/phpdotenv": "^2.2",
         "codeguy/upload": "1.3.2",
-        "intervention/image": "2.2.2"
+        "intervention/image": "2.2.2",
+        "facebook/php-sdk-v4": "^5.3"
     },
     "autoload": {
         "psr-4": {
