--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "keyword": ["Europa Re", "Slim", "Twig", "Illuminate", "Zend"],
     "license": "MIT",
     "require": {
+        "php": ">=5.6",
         "slim/slim": "2.*",
         "slim/views": "*",
         "slim/logger": "0.1.*",
@@ -16,6 +17,12 @@
         "zendframework/zend-authentication": "2.5.1",
         "zendframework/zend-permissions-acl": "2.5.1",
         "zendframework/zend-session": "2.5.1",
+        "zendframework/zend-stdlib": "2.5.1",
+        "zendframework/zend-serializer": "2.5.1",
+        "zendframework/zend-eventmanager": "2.5.1",
+        "zendframework/zend-math": "2.5.1",
+        "zendframework/zend-json": "2.5.1",
+        "zendframework/zend-servicemanager": "2.5.1",
         "vlucas/valitron": "^1.2",
         "vlucas/phpdotenv": "^2.2",
         "codeguy/upload": "1.3.2",
