--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "vlucas/phpdotenv": "^2.2",
         "codeguy/upload": "1.3.2",
         "intervention/image": "2.2.2",
-        "facebook/php-sdk-v4": "^5.3"
+        "facebook/php-sdk-v4": "^5.3",
+        "thunderer/shortcode": "^0.6"
     },
     "autoload": {
         "psr-4": {
