--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "codeguy/upload": "1.3.2",
         "intervention/image": "2.2.2",
         "facebook/php-sdk-v4": "^5.3",
-        "thunderer/shortcode": "^0.6"
+        "thunderer/shortcode": "^0.6",
+        "google/recaptcha": "~1.1"
     },
     "autoload": {
         "psr-4": {
