--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "europa_re",
+    "name": "cms-simple",
     "author": "Arber Mustafa",
     "version": "1.0.0",
     "description": "New Webpage of ERe",
